# math-712

./: .gitignore  CMakeLists.txt  common_defs.h  csv.h  csv_writer.c  csv_writer.h  hw2.c  hw2.cpp  hw2_part1.cpp  hw2_part2.cpp
eigen/: CMakeLists.txt
heat_equation_1d/: heat_equation_1d_ghost_points.h  heat_equation_1d_one_sided.h
hw2/: heat_equation_fwd.c  heat_equation_fwd.h  hw2.c
hw3/: book_example.c  hw3.c
plot/: plot_hw2_part1.plt  plot_hw2_part2.plt  plot_hw2_part3.plt  plot_sol_ghost.plt
